# squash-merge-test

./: Jenkinsfile  README.md  file1.txt  file2.txt  file3.txt  renovate.json
docker/: Dockerfile
npm/: package.json
python/: pyproject.toml  requirements.txt
ruby/: Gemfie
terraform/: versions.tf
terraform/other tf/: versions.tf
