[tool.poetry]
name = "billon"
version = "0.1.0"
description = ""
authors = ["Jean-Martin Archer <jm@alloy.ai>"]

[tool.poetry.dependencies]
python = "~3.9"
hvac = "==0.9.2"
keyring = "==19.0.2"
pyyaml = "==5.4.1"
requests = "==2.31.0"
"keyrings.alt" = "==3.4.0"
pygithub = "==1.55"
typer = "==0.3.2"
python-dateutil = "==2.8.1"
google-api-python-client = "==1.12.5"
google-cloud-bigquery = "==3.11.3"
google-cloud-bigquery-reservation = "==1.11.1"
google-cloud-monitoring = "==1.0.0"
google-cloud-monitoring-dashboards = "==1.0.0"
google-cloud-storage = "==1.43.0"
pyperclip = "==1.8.1"
google-cloud-logging = "==2.0.0"
sentry-sdk = "==1.14.0"
python-pypi-mirror = "==4.0.6"
tenacity = "==8.2.2"

[tool.poetry.dev-dependencies]
pyxdg = "==0.27"
bpython = "*"
black = "==21.12b0"
isort = "==4.3.18"
pylint = "==2.11.1"
mypy = "==0.910"
importlib-metadata = "==4.6.4"
pytest = "==5.4.2"

types-PyYAML = "*"
types-python-dateutil = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.4.1"]
build-backend = "poetry.core.masonry.api"
