[tool.poetry]
name = "billon"
version = "0.1.0"
description = ""
authors = ["Jean-Martin Archer <jm@alloy.ai>"]

[tool.poetry.dependencies]
python = "~3.9"
hvac = "==0.11.2"
keyring = "==19.3.0"
pyyaml = "==5.4.1"
requests = "==2.31.0"
"keyrings.alt" = "==3.5.2"
pygithub = "==1.59.1"
typer = "==0.9.0"
python-dateutil = "==2.8.2"
google-api-python-client = "==1.12.11"
google-cloud-bigquery = "==3.11.4"
google-cloud-bigquery-reservation = "==1.11.2"
google-cloud-monitoring = "==1.1.2"
google-cloud-monitoring-dashboards = "==1.0.2"
google-cloud-storage = "==1.44.0"
pyperclip = "==1.8.2"
google-cloud-logging = "==2.7.2"
sentry-sdk = "==1.30.0"
python-pypi-mirror = "==4.2.0"
tenacity = "==8.2.3"

[tool.poetry.dev-dependencies]
pyxdg = "==0.28"
bpython = "*"
black = "==21.12b0"
isort = "==4.3.21"
pylint = "==2.17.5"
mypy = "==0.991"
importlib-metadata = "==4.13.0"
pytest = "==5.4.3"

types-PyYAML = "*"
types-python-dateutil = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.4.1"]
build-backend = "poetry.core.masonry.api"
