[tool.poetry]
name = "billon"
version = "0.1.0"
description = ""
authors = ["Jean-Martin Archer <jm@alloy.ai>"]

[tool.poetry.dependencies]
python = "~3.9"
hvac = "==1.2.0"
keyring = "==24.2.0"
pyyaml = "==6.0.1"
requests = "==2.31.0"
"keyrings.alt" = "==5.0.0"
pygithub = "==1.55"
typer = "==0.3.2"
python-dateutil = "==2.8.1"
google-api-python-client = "==2.98.0"
google-cloud-bigquery = "==3.11.3"
google-cloud-bigquery-reservation = "==1.11.1"
google-cloud-monitoring = "==2.15.1"
google-cloud-monitoring-dashboards = "==2.12.2"
google-cloud-storage = "==2.10.0"
pyperclip = "==1.8.1"
google-cloud-logging = "==3.6.0"
sentry-sdk = "==1.14.0"
python-pypi-mirror = "==5.2.0"
tenacity = "==8.2.2"

[tool.poetry.dev-dependencies]
pyxdg = "==0.27"
bpython = "*"
black = "==23.7.0"
isort = "==5.12.0"
pylint = "==2.11.1"
mypy = "==1.5.1"
importlib-metadata = "==6.8.0"
pytest = "==7.4.2"

types-PyYAML = "*"
types-python-dateutil = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.4.1"]
build-backend = "poetry.core.masonry.api"
